resources/kompose/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/monitanet: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: monitadb
            - name: MYSQL_PASSWORD
              value: pass
            - name: MYSQL_ROOT_PASSWORD
              value: root
            - name: MYSQL_USER
              value: monita
          image: mysql:5.7
          name: monitadb
          resources: {}
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d/init.sql
              name: db-claim0
      hostname: db
      restartPolicy: Always
      volumes:
        - name: db-claim0
          persistentVolumeClaim:
            claimName: db-claim0
status: {}
