resources/kompose/mysqlexporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: mysqlexporter
  name: mysqlexporter
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysqlexporter
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/monitanet: "true"
        io.kompose.service: mysqlexporter
    spec:
      containers:
        - env:
            - name: DATA_SOURCE_NAME
              value: monita:pass@(db:3306)/
            - name: GET_HOSTS_FROM
              value: dns
          image: prom/mysqld-exporter
          name: mysqlexporter
          resources: {}
      hostname: mysqlexporter
      restartPolicy: Always
status: {}
